# ziyrak_lib

./: .gitignore  Cargo.toml  README.md  lib.rs  tree_dir.txt
ai/: Cargo.toml
ai/src/: lib.rs
api/: Cargo.toml
data_source/: Cargo.toml
model/: Cargo.toml
model/src/: camera.rs
src/: lib.rs
src/api/: Cargo.toml
src/api/src/: lib.rs
src/data_source/: datastore_manager.rs  mod.rs  output.rs
src/data_source/core/: mod.rs
src/data_source/query/: mod.rs
src/data_source/query/statement_models/: create.rs  delete.rs  insert.rs  mod.rs  select.rs  update.rs
src/lib_core/: mod.rs
src/model/: camera.rs  mod.rs  notification.rs  photo.rs  video.rs
src/z_surreal_orm/: Cargo.toml  tree_dir.txt
src/z_surreal_orm/src/: lib.rs
src/z_surreal_orm/src/core/: generators.rs  mod.rs  separators.rs
src/z_surreal_orm/src/query/: mod.rs
src/z_surreal_orm/src/sql/: mod.rs  output.rs
src/z_surreal_orm/src/sql/statement/: create.rs  delete.rs  insert.rs  mod.rs  select.rs  update.rs
