[package]
name = "api"
version = "0.1.0"
authors = [
    "Alishan Usmanov <xgamexarkon@gmail.com>",
    "Ruslan Kilichev <ruslankilichev777@gmail.com>"
]
edition = "2021"
rust-version = "1.69.0"
description = "Library for functionality of REST Api | Ziyrak."
readme = "README.md"
repository = "https://github.com/Ali-0211-TR/ziyrak_lib.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
