[package]
name = "z_surreal_orm"
version = "0.1.0"
edition = "2021"
description = "A Rust library for Surrealdb ORM."
authors = ["Alishan Usmanov <xgamexarkon@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nom]
version = "7.1.3"
features = ["alloc"]

[lib]
name = "z_surreal_orm"
path = "src/lib.rs"

[features]
default = []

[dependencies]
serde = {version = "1.0.0", features = ["derive"]}
serde_json = "1.0.96"
surrealdb = { version = "1.0.0-beta.9" }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.51"